# python-template

./: AGENTS.md  Makefile  README.md  copier.yml  dev.env  pyproject.toml
.github/workflows/: ci.yml
src/python_template/: __init__.py
template/: .python-version.jinja  AGENTS.md.jinja  README.md.jinja  dev.env.jinja  pyproject.toml.jinja
template/.github/workflows/: ci.yml.jinja
template/devtools/: clean.ps1  clean.sh
template/src/{{ package_module }}/: __init__.py.jinja  settings.py.jinja
template/tests/: main_tests.py.jinja
tests/: main_tests.py  template_copy_tests.py
