[project]
name = "python-template"
version = "0.1.0"
description = "Python project template using copier"
readme = "README.md"
authors = [
    { name = "Javier Carnero", email = "javier@carnero.net" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
python-template = "python_template:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
