[project]
name = "python-template"
version = "0.1.0"
description = "Copier template for Python projects"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "copier>=9.13.0",
    "pytest>=9.0.2",
    "pytest-sugar>=1.1.1",
    "ruff>=0.14.10",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
]

[tool.pytest.ini_options]
python_files = ["*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
testpaths = [
    "tests",
]
